--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,11 @@ set (FTP_SERVER_SRC ${FTP_SERVER_SRC_DIR}/main.cpp
     ${FTP_SERVER_SRC_DIR}/ftp_server.cpp
 )
 
+if (NOT WIN32)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fpermissive")
+endif()
+
 set (FTP_SERVER_INC_DIR ${FTP_SERVER_SRC_DIR}/../../)
 
 include_directories ("${FTP_SERVER_SRC_DIR}")
